Styling for mobile

--- a/narrow.css
+++ b/narrow.css
@@ -1,22 +1,22 @@
 /* Adapted from https://github.com/ocrebb776/wordle-recreate/blob/main/narrow.css */
 body {
-  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
-  background-color: #121213;
-  font-size: 0px;
+	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+	background-color: #121213;
+	font-size: 0px;
 }
 .heading-center {
-  text-align: center;
-  height: 6.2vh;
-  font-size: 5vh;
-  color: white;
-  border-bottom: 0.1vw solid #4f4f52;
-  letter-spacing: 1vw;
-  width: 90vw;
-  top: 0;
-  float: top;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  position: absolute;
+	text-align: center;
+	height: 6.2vh;
+	font-size: 5vh;
+	color: white;
+	border-bottom: 0.1vw solid #4f4f52;
+	letter-spacing: 1vw;
+	width: 90vw;
+	top: 0;
+	float: top;
+	margin-left: 5vw;
+	margin-right: 5vw;
+	position: absolute;
 }
 .subheading {
 	text-align: center;
@@ -27,59 +27,62 @@ body {
 	letter-spacing: 0.1vw;
 	width: 90vw;
 	float: top;
-	margin-top: 8vh;
+	margin-top: 2vh;
 	margin-left: 5vw;
 	margin-right: 5vw;
 	position: absolute;
 }
 .playspace-table-center {
-  color: white;
-  text-align: center;
-  margin-top: 6.2vh;
+	color: white;
+	text-align: center;
+	margin-top: 11vh;
 }
 .box {
-  max-width: 15vw;
-  max-height: 15vw;
-  min-width: 15vw;
-  min-height: 15vw;
-  border: 0.5vw solid #4f4f52;
-  margin: 0.6vw;
-  background-color: #121213;
-  position: static;
-  font-size: 7vw;
-  color: white;
-  margin-left: 0vw;
-  margin-bottom: 0vh;
+	text-align: center;
+	max-width: 15vw;
+	max-height: 15vw;
+	min-width: 15vw;
+	min-height: 15vw;
+	border: 0.5vw solid #4f4f52;
+	margin: 0.6vw;
+	background-color: #121213;
+	position: static;
+	font-size: 7vw;
+	color: white;
+	margin-left: 0vw;
+	margin-bottom: 0vh;
+	test-transform: capitalize;
+	display: box;
 }
 table {
-  margin-left: auto;
-  margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 .first {
-  color: white;
+	color: white;
 }
 .keyboard {
-  width: 9vw;
-  height: 8vh;
-  margin-right: 0px;
-  margin-left: 0.5vw;
-  margin-top: 1vh;
-  border: none;
-  border-radius: 1vh;
-  font-size: 4vw;
-  color: white;
-  background-color: #818384;
-  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+	width: 9vw;
+	height: 8vh;
+	margin-right: 0px;
+	margin-left: 0.5vw;
+	margin-top: 1vh;
+	border: none;
+	border-radius: 1vh;
+	font-size: 4vw;
+	color: white;
+	background-color: #818384;
+	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 .keyboard:hover {
 	opacity: 0.5;
 }
 .keyboard-table {
-  position: fixed;
-  left: 2.75vw;
-  bottom: 1vh;
-  text-align: center;
-  font-size: 0px;
+	position: fixed;
+	left: 2.75vw;
+	bottom: 1vh;
+	text-align: center;
+	font-size: 0px;
 }
 .selected-row {
 	background-color: #737373;
@@ -141,6 +144,7 @@ table {
 	margin-bottom: 24.5vh;
 	font-size: 1.5ch;
 	border: 0.5ch solid #bfa7ab;
+	display: block;
 }
 .blink {
 	animation: blinker 0.35s linear 2;
