--- a/style.css
+++ b/style.css
@@ -1,18 +1,50 @@
 body {
 	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 	background-color: #0e0b0b;
+} /* https://www.w3schools.com/css/css_dropdowns.asp */
+.rules {
+	text-align: center;
+	font-size: 1.15rem;
+	color: #f75244;
+	padding-inline: 5px;
+	padding-block: 3px;
+	border: 1px dashed #0259d3;
+	background-color: #302727;
 }
-
-/*Some styling from https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css*/
-
+.info-dropdown {
+	position: relative;
+	display: inline-block;
+}
+.info-content {
+	display: none;
+	position: absolute;
+	opacity: 0.8;
+	background-color: #4e4a4a;
+	min-width: 750px;
+	text-align: center;
+	font-size: 2.5vh;
+	color: white;
+	letter-spacing: 2px;
+	box-shadow: 0px 8px 16px 0px rgb(120,120,120,1);
+	padding: 12px 16px;
+	z-index: 1;
+}
+.info-dropdown:hover .info-content {
+	display: block;
+}
+.info-dropdown:hover .rules {
+	opacity: 0.3;
+	cursor: pointer;
+}
+/*Some styling adapted from https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css*/
 .heading-center {
 	text-align: center;
 	height: 6.2vh;
+	width: 60vw;
 	font-size: 5vh;
 	color: white;
-	border-bottom: 0.1vw solid #4f4f52;
-	letter-spacing: 0.6vw;
-	width: 60vw;
+	border-bottom: 2px solid #4f4f52;
+	letter-spacing: 3.25px;
 	top: 0;
 	float: top;
 	margin-left: 20vw;
@@ -22,10 +54,10 @@ body {
 
 .subheading {
 	text-align: center;
-	height: 20vh;
+	height: 13.75vh;
 	font-size: 2.5vh;
 	color: white;
-	border-bottom: 0.1vw solid #4f4f52;
+	border-bottom: 2px solid #4f4f52;
 	letter-spacing: 0.1vw;
 	width: 70vw;
 	float: top;
@@ -38,12 +70,13 @@ body {
 .playspace-table-center {
 	color: white;
 	text-align: center;
-	margin-top: 7vh;
+	margin-top: 3vh;
 }
 
 .box {
-	max-width: 6vh;
-	max-height: 6vh;
+	text-align: center;
+	max-width: 5vh;
+	max-height: 5vh;
 	min-width: 7vh;
 	min-height: 7vh;
 	border: 0.25vh solid #4f4f52;
@@ -54,7 +87,6 @@ body {
 	color: white;
 	margin-left: auto;
 	margin-bottom: auto;
-	text-align: center;
 	text-transform: capitalize;
 	display: block;
 }
@@ -64,32 +96,32 @@ table {
 	margin-right: auto;
 }
 /* https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
-.keyboard {
-	width: 4vw;
-	height: 7vh;
+.key {
+	width: 5vw;
+	height: 8vh;
 	margin-top: 1vh;
 	margin-left: 0.5vw;
 	border: none;
 	border-radius: 1vh;
-	font-size: 100%;
+	font-size: 120%;
 	color: white;
 	opacity: 0.8;
 	background-color: #818384;
 	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
-.keyboard:hover {
-	opacity: 0.5;
+.key:hover {
+	opacity: 0.7;
 	
 	cursor: pointer;
 }
 
 /* https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
-.keyboard-table {
+.keyboard {
 	text-align: center;
 	position: fixed;
-	margin-left: 24vw;
-	margin-right: 24vw;
+	margin-left: 19vw;
+	margin-right: 19vw;
 	bottom: 1vh;
 }
 
