--- a/styles/components/dropdown.css
+++ b/styles/components/dropdown.css
@@ -25,7 +25,7 @@
     display: block;
 }
 
-.show-rules {
+.dropdown-toggle {
     display: inline-block;
     font-size: 1.5rem;
     color: var(--red);
@@ -33,7 +33,7 @@
     border: 1px dashed var(--senary-color);
 }
 
-.dropdown:hover .show-rules {
+.dropdown:hover .dropdown-toggle {
     opacity: 0.3;
     cursor: pointer;
 }
