--- a/style.css
+++ b/style.css
@@ -1,18 +1,50 @@
 body {
 	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 	background-color: #0e0b0b;
+} /* Formatting from https://www.w3schools.com/css/css_dropdowns.asp */
+.rules {
+	text-align: center;
+	font-size: 1.5rem;
+	color: #f75244;
+	padding-inline: 5px;
+	padding-block: 3px;
+	border: 1px dashed #0259d3;
+	background-color: #302727;
 }
-
-/*Some styling from https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css*/
-
+.info-dropdown {
+	position: relative;
+	display: inline-block;
+}
+.info-content {
+	display: none;
+	position: absolute;
+	opacity: 0.8;
+	background-color: #4e4a4a;
+	min-width: 750px;
+	text-align: center;
+	font-size: 2.5vh;
+	color: white;
+	letter-spacing: 2px;
+	box-shadow: 0px 8px 16px 0px rgb(120,120,120,1);
+	padding: 12px 16px;
+	z-index: 1;
+}
+.info-dropdown:hover .info-content {
+	display: block;
+}
+.info-dropdown:hover .rules {
+	opacity: 0.3;
+	cursor: pointer;
+}
+/* Some styling adapted from ocrebb776 on Github : https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css*/
 .heading-center {
 	text-align: center;
 	height: 6.2vh;
+	width: 60vw;
 	font-size: 5vh;
 	color: white;
-	border-bottom: 0.1vw solid #4f4f52;
-	letter-spacing: 0.6vw;
-	width: 60vw;
+	border-bottom: 2px solid #4f4f52;
+	letter-spacing: 3.25px;
 	top: 0;
 	float: top;
 	margin-left: 20vw;
@@ -22,28 +54,29 @@ body {
 
 .subheading {
 	text-align: center;
-	height: 20vh;
+	height: 14.25vh;
 	font-size: 2.5vh;
 	color: white;
-	border-bottom: 0.1vw solid #4f4f52;
+	border-bottom: 2px solid #4f4f52;
 	letter-spacing: 0.1vw;
-	width: 60vw;
+	width: 70vw;
 	float: top;
 	margin-top: 8vh;
-	margin-left: 21.25vw;
-	margin-right: 21.25vw;
+	margin-left: 15vw;
+	margin-right: 15vw;
 	position: static;
 }
 
 .playspace-table-center {
 	color: white;
 	text-align: center;
-	margin-top: 7vh;
+	margin-top: 3vh;
 }
 
 .box {
-	max-width: 6vh;
-	max-height: 6vh;
+	text-align: center;
+	max-width: 5vh;
+	max-height: 5vh;
 	min-width: 7vh;
 	min-height: 7vh;
 	border: 0.25vh solid #4f4f52;
@@ -54,7 +87,6 @@ body {
 	color: white;
 	margin-left: auto;
 	margin-bottom: auto;
-	text-align: center;
 	text-transform: capitalize;
 	display: block;
 }
@@ -62,6 +94,35 @@ body {
 table {
 	margin-left: auto;
 	margin-right: auto;
+}
+/* key styling adapted from ocrebb776 on Github: https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
+.key {
+	width: 5vw;
+	height: 8vh;
+	margin-top: 1vh;
+	margin-left: 0.5vw;
+	border: none;
+	border-radius: 1vh;
+	font-size: 120%;
+	color: white;
+	opacity: 0.8;
+	background-color: #818384;
+	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+
+.key:hover {
+	opacity: 0.7;
+	
+	cursor: pointer;
+}
+
+/* keyboard styling adapted from ocrebb776 on Github: https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
+.keyboard {
+	text-align: center;
+	position: fixed;
+	margin-left: 19vw;
+	margin-right: 19vw;
+	bottom: 1vh;
 }
 
 .selected-row {
@@ -98,20 +159,86 @@ table {
 
 .output {
 	text-align: center;
-	color: white;
+	color: #e3e3ed;
+	font-size: 4vh;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .new-game {
 	text-align: center;
-	background-color: #736868;
-	color: white;
+	height: 5vh;
+	width: 14vw;
+	background-color: #4a4c54;
+	color: #e3e3ed;
+	margin-left: 42vw;
+	margin-right: 42vw;
+	font-size: 3vh;
+	border: 0.5vh dashed #e3e3ed;
+	position: static;
+	transition-duration: 0.4s;
+}
+
+.new-game:hover {
+	color: #4a4c54;
+	background-color: #bdbdc7;
+	border: 0.5vh dashed #4a4c54;
+	cursor: pointer;
+}
+
+.prog {
+	text-align: center;
+	padding-top: 3px;
+	height: 25.5vh;
+	width: 40vw;
+	background-color: #61636e;
+	color: #e3e3ed;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 12vw;
-	max-height: 7vh;
-	min-width: 9vw;
-	min-height: 6vh;
-	border: 0.5vh dashed #4f4f52;
+	margin-bottom: 27vh;
+	font-size: 1.5ch;
+	border: 0.5ch solid #bfa7ab;
+}
+
+.blink {
+	animation: blinker 0.35s linear 2;
+}
+
+/* blinker animation from https://www.w3schools.com/howto/howto_css_shake_image.asp */
+@keyframes blinker {
+	0% {
+		transform: translate(1px, 1px) rotate(0deg);
+	}
+	10% {
+		transform: translate(-1px, -2px) rotate(-1deg);
+	}
+	20% {
+		transform: translate(-3px, 0px) rotate(1deg);
+	}
+	30% {
+		transform: translate(3px, 2px) rotate(0deg);
+		background-color: #bc3441;
+	}
+	40% {
+		transform: translate(1px, -1px) rotate(1deg);
+	}
+	50% {
+		transform: translate(-1px, 2px) rotate(-1deg);
+		background-color: #bc3441;
+	}
+	60% {
+		transform: translate(-3px, 1px) rotate(0deg);
+	}
+	70% {
+		transform: translate(3px, 1px) rotate(-1deg);
+	}
+	80% {
+		transform: translate(-1px, -1px) rotate(1deg);
+	}
+	90% {
+		transform: translate(1px, 2px) rotate(0deg);
+	}
+	100% {
+		transform: translate(1px, -2px) rotate(-1deg);
+	}
 }
