--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 	background-color: #0e0b0b;
-} /* https://www.w3schools.com/css/css_dropdowns.asp */
+} /* Formatting from https://www.w3schools.com/css/css_dropdowns.asp */
 .rules {
 	text-align: center;
 	font-size: 1.5rem;
@@ -36,7 +36,7 @@ body {
 	opacity: 0.3;
 	cursor: pointer;
 }
-/*Some styling adapted from https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css*/
+/* Some styling adapted from ocrebb776 on Github : https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css*/
 .heading-center {
 	text-align: center;
 	height: 6.2vh;
@@ -95,7 +95,7 @@ table {
 	margin-left: auto;
 	margin-right: auto;
 }
-/* https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
+/* key styling adapted from ocrebb776 on Github: https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
 .key {
 	width: 5vw;
 	height: 8vh;
@@ -116,7 +116,7 @@ table {
 	cursor: pointer;
 }
 
-/* https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
+/* keyboard styling adapted from ocrebb776 on Github: https://github.com/ocrebb776/wordle-recreate/blob/main/wide.css */
 .keyboard {
 	text-align: center;
 	position: fixed;
@@ -204,7 +204,7 @@ table {
 	animation: blinker 0.35s linear 2;
 }
 
-/* https://www.w3schools.com/howto/howto_css_shake_image.asp */
+/* blinker animation from https://www.w3schools.com/howto/howto_css_shake_image.asp */
 @keyframes blinker {
 	0% {
 		transform: translate(1px, 1px) rotate(0deg);
